RESOLVED FIXED273442
AX: Off-main-thread text markers don't include text inside table caption elements
https://bugs.webkit.org/show_bug.cgi?id=273442
Summary AX: Off-main-thread text markers don't include text inside table caption elem...
Tyler Wilcock
Reported 2024-04-29 15:50:27 PDT
...
Attachments
Patch (18.72 KB, patch)
2024-04-29 16:00 PDT, Tyler Wilcock
no flags
Patch (18.72 KB, patch)
2024-04-29 16:27 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2024-04-29 15:50:40 PDT
Tyler Wilcock
Comment 2 2024-04-29 16:00:15 PDT
Tyler Wilcock
Comment 3 2024-04-29 16:27:18 PDT
EWS
Comment 4 2024-04-30 07:47:57 PDT
Committed 278163@main (42fadaaad75d): <https://commits.webkit.org/278163@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471204 [details].
Note You need to log in before you can comment on or make changes to this bug.