Source/WebCore/accessibility/AccessibilityObject.cpp
@@ -4587,6 +4587,8 @@ static void appendChildrenToArray(RefPtr<AXCoreObject> object, bool isForward, R
 {
     // A table's children includes elements whose own children are also the table's children (due to the way the Mac exposes tables).
     // The rows from the table should be queried, since those are direct descendants of the table, and they contain content.
+    // FIXME: Unlike AXCoreObject::children(), AXCoreObject::rows() returns a copy, not a const-reference. This can be wasteful
+    // for tables with lots of rows and probably should be changed.
     const auto& searchChildren = object->isTable() && object->isExposable() ? object->rows() : object->children();
 
     size_t childrenSize = searchChildren.size();
